<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.adamos_logistic.ui.User.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.adamos_logistic.ui.Orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.adamos_logistic.ui.Chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/chat_activity" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.adamos_logistic.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.adamos_logistic.ui.Contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.adamos_logistic.ui.Logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>